# ConPact

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
references/: delegation-template.md
src/conpact_server/: __init__.py  __main__.py  contract.py  paths.py  registry.py  schema.py  server.py
tests/: conftest.py  test_contract.py  test_paths.py  test_registry.py  test_schema.py  test_server.py
