[project]
name = "conpact"
version = "0.1.0"
description = "Multi-Agent Contract Protocol — MCP server for cross-agent coordination"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
conpact-server = "conpact_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conpact_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
